# kdl-rs

./: .clog.toml  AGENTS.md  CHANGELOG.md  Cargo.toml  NOTICE  README.md  README.tpl  cliff.toml  clippy.toml  dist-workspace.toml
.github/workflows/: ci.yml  release.yml
examples/: Cargo.kdl  custom-errors.rs  insert-node.rs  kdl-schema.kdl  zellij-unquoted-bindings.kdl  zellij.kdl
src/: de.rs  document.rs  entry.rs  error.rs  fmt.rs  identifier.rs  kdl-schema.kdl  lib.rs  node.rs  nom_compat.rs  parser.rs  query.rs  query_parser.rs  schema.rs  se.rs  v1_parser.rs  v2_parser.rs  value.rs
tests/: README.md  compliance.rs  examples.rs  formatting.rs  query_api.rs  query_matchers.rs  query_ops.rs  query_syntax.rs
tests/disabled_tests/: query_syntax.rs
tests/test_cases/expected_kdl/: _parse_all_arg_types.kdl  hex.kdl  hex_int.kdl  negative_exponent.kdl  parse_all_arg_types.kdl  positive_exponent.kdl  prop_float_type.kdl  sci_notation_large.kdl  sci_notation_small.kdl  space_after_node.kdl  underscore_in_exponent.kdl
tests/test_cases/input/: commented_child.kdl  commented_line.kdl  empty_child_whitespace.kdl  escline.kdl  escline_comment_node.kdl  escline_line_comment.kdl  hex.kdl  hex_int.kdl  leading_newline.kdl  multiline_comment.kdl  multiline_nodes.kdl  multiline_string.kdl  nested_multiline_block_comment.kdl  newlines_in_block_comment.kdl  raw_string_arg.kdl  raw_string_prop.kdl  semicolon_in_child.kdl  slashdash_full_node.kdl  slashdash_in_slashdash.kdl  slashdash_node_in_child.kdl  slashdash_node_with_child.kdl  space_after_node.kdl
tools/kdl-lsp/: Cargo.toml  README.md
tools/kdl-lsp/src/: main.rs
