[package]
name = "kdl"
version = "6.3.3"
description = "Document-oriented KDL parser and API. Allows formatting/whitespace/comment-preserving parsing and modification of KDL text."
authors = ["Kat Marchán <kzm@zkat.tech>", "KDL Community"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://kdl.dev"
repository = "https://github.com/kdl-org/kdl-rs"
keywords = ["kdl", "document", "serialization", "config"]
rust-version = "1.71.1"
edition = "2021"

[features]
default = ["span"]
span = []
v1-fallback = ["v1"]
v1 = ["kdlv1"]

[workspace]
members = ["tools/*"]

[dependencies]
miette.workspace = true
num = "0.4.2"
winnow = { version = "=0.6.24", features = ["alloc", "unstable-recover"] }
kdlv1 = { package = "kdl", version = "4.7.0", optional = true }

[workspace.dependencies]
miette = { git = "https://github.com/zkat/miette.git", default-features = false }

[dev-dependencies]
miette = { workspace = true, features = ["derive", "fancy"] }
thiserror = "2.0.12"
pretty_assertions = "1.3.0"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# docs.rs-specific configuration
[package.metadata.docs.rs]
# document all features
all-features = true
# defines the configuration attribute `docsrs`
rustdoc-args = ["--cfg", "docsrs"]
